# legogro16

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: data_structures.rs  error.rs  generator.rs  generator_new.rs  lib.rs  prover.rs  prover_new.rs  r1cs_to_qap.rs  test.rs  test_new.rs  tests.rs  verifier.rs  verifier_new.rs
src/aggregation/: README.md  commitment.rs  key.rs  kzg.rs  mod.rs  pairing_check.rs  srs.rs  tests.rs  transcript.rs  utils.rs
src/aggregation/groth16/: proof.rs  prover.rs  verifier.rs
src/aggregation/legogroth16/: proof.rs  prover.rs  using_groth16.rs  verifier.rs
src/circom/: Readme.md  circuit.rs  error.rs  mod.rs  r1cs.rs  r1cs_reader.rs  tests.rs  witness.rs
src/link/: error.rs  matrix.rs  mod.rs  snark.rs  utils.rs
test-vectors/bls12-381/: all_different_10.wasm  less_than_32.wasm  less_than_public_64.wasm  mimc_bls12_381.wasm  mimcsponge_bls12_381.wasm  multiply2.wasm  multiply2_bounded.wasm  multiply_n.wasm  nconstraints.wasm  not_equal_public.wasm  test1.wasm  test2.wasm  test3.wasm  test4.wasm
test-vectors/bn128/: all_different_10.wasm  less_than_32.wasm  less_than_public_64.wasm  mimc_bn128.wasm  mimcsponge_bn128.wasm  multiply2.wasm  multiply2_bounded.wasm  multiply_n.wasm  nconstraints.wasm  not_equal_public.wasm  poseidon_bn128.wasm  test1.wasm  test2.wasm  test3.wasm  test4.wasm
test-vectors/circuits/: range_proof.circom
tests/: mimc.rs
