[package]
name = "legogroth16"
version = "0.3.0"
authors = [ "arkworks contributors", "Dock.io" ]
description = "An implementation of the LegoGroth16, the Legosnark variant of Groth16 zkSNARK proof system"
repository = "https://github.com/lovesh/legogroth16"
keywords = [ "zero-knowledge", "SNARK", "LegoSNARK", "LegoGroth16", "Circom" ]
categories = [ "cryptography" ]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

################################# Dependencies ################################

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-poly = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.1", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }
derivative = { version = "2.0", features = ["use_core"], optional = true}
rayon = { version = "1", optional = true }
wasmer = { version = "2.3.0", optional = true, default-features = false }
fnv = { version = "1.0.3", default-features = false, optional = true }
num-bigint = { version = "0.4", default-features = false, optional = true }
log = "0.4"

[dev-dependencies]
csv = { version = "1" }
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-bls12-377 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-cp6-782 = { version = "^0.3.0", default-features = false }
ark-mnt4-298 = { version = "^0.3.0", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-298 = { version = "^0.3.0", default-features = false, features = ["r1cs"] }
ark-mnt4-753 = { version = "^0.3.0", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-753 = { version = "^0.3.0", default-features = false, features = ["r1cs"] }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }
hex-literal = "0.2.1"
serde_json = "1.0.64"

[profile.release]
lto = true

[features]
default = ["parallel", "circom"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-std/std", "wasmer-sys" ]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon"]
print-trace = [ "ark-std/print-trace" ]
circom = ["wasmer", "fnv", "num-bigint"]
wasmer-js = ["wasmer/js-default"]
wasmer-sys = ["wasmer/sys-default"]